# repo-manage

./: .editorconfig  .envrc  .gitignore  .markdownlint-cli2.yaml  .pre-commit-config.yaml  .tombi.toml  CHANGELOG.md  LICENSE  README.md  biome.json  cliff.toml  committed.toml  prek.toml  pyproject.toml
.github/: renovate.json
.github/workflows/: test.yml
src/repo_manage/: __init__.py  __version__.py  cli.py
src/repo_manage/command/: __init__.py  clone.py  events.py  exec.py  list.py  update.py  version.py
src/repo_manage/util/: __init__.py
tests/: .ruff.toml  conftest.py  test_cli.py
tests/command/: test_clone.py  test_exec.py  test_exec_parse.py  test_list.py  test_update.py  test_version.py
tests/util/: test_init.py
workflows/: test.yml
